<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/pikachu_logo"
        android:src="@drawable/pikachu" />

    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/user"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/pass"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"/>

    <Button
        android:id="@+id/no_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_user"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/black"/>

</LinearLayout>